# Jelly

./: CMakeLists.txt  CompatabilityTests.cpp  QuickSmokeTest.cpp  benchmark_rotate_mask_block  benchmark_rotate_mask_block.cpp  benchmark_rotate_mask_block_48  demo  readme.md  reference_semantics.txt  run_benchmark_report.sh  run_benchmark_report_output.txt  run_benchmarks.sh  run_compatability_tests.sh  run_test_brew.sh  run_tests_swift.sh  semantics.txt
BENCHMARK/: BenchmarkBlockExecutor.cpp  BenchmarkBlockExecutor.hpp  BenchmarkFlatExecutor.cpp  BenchmarkFlatExecutor.hpp  BenchmarkRunSupport.hpp  BenchmarkRun_All.cpp  BenchmarkRun_CascadeJumpXORCipher.cpp  BenchmarkRun_CascadeXORCipher.cpp  BenchmarkRun_InvertCipher.cpp  BenchmarkRun_InvertMaskCipher.cpp  BenchmarkRun_PasswordAddCipher.cpp  BenchmarkRun_PasswordCipher.cpp  BenchmarkRun_PasswordJumpAddCipher.cpp  BenchmarkRun_PasswordJumpSubtractCipher.cpp  BenchmarkRun_PasswordJumpXORCipher.cpp  BenchmarkRun_PasswordSubtractCipher.cpp  BenchmarkRun_PasswordXORCipher.cpp  BenchmarkRun_PepperAddCipher.cpp  BenchmarkRun_PepperCipherExample.cpp  BenchmarkRun_PepperCipherXOR.cpp  BenchmarkRun_PepperCipherXORNoise.cpp  BenchmarkRun_PepperDualJumpNoiseXORCipher.cpp  BenchmarkRun_PepperJumpNoiseXORCipher.cpp  BenchmarkRun_PepperJumpXORCipher.cpp  BenchmarkRun_PepperNoiseXORCipher.cpp  BenchmarkRun_PepperSubtractCipher.cpp  BenchmarkRun_PepperXORCipher.cpp  BenchmarkRun_ReverseBlockByteCipher.cpp  BenchmarkRun_ReverseBlockCipher.cpp  BenchmarkRun_ReverseCipher.cpp  BenchmarkRun_ReverseMaskBlockCipher.cpp  BenchmarkRun_ReverseMaskByteBlockCipher.cpp  BenchmarkRun_ReverseMaskCipher.cpp  BenchmarkRun_RippleBlockCipher.cpp  BenchmarkRun_RippleCipher.cpp  BenchmarkRun_RippleMaskBlockCipher.cpp  BenchmarkRun_RippleMaskCipher.cpp  BenchmarkRun_RotateBlockByteCipher.cpp  BenchmarkRun_RotateBlockCipher.cpp  BenchmarkRun_RotateCipher.cpp  (+39 more)
BENCHMARK_LOGS/: cascade_jump_xor_2026_03_19_11_45.txt  cascade_jump_xor_2026_03_19_11_46.txt  cascade_xor_2026_03_19_11_45.txt  cascade_xor_2026_03_19_11_46.txt  invert_2026_03_13_18_32.txt  invert_2026_03_14_21_36.txt  invert_2026_03_14_21_38.txt  invert_2026_03_19_11_45.txt  invert_2026_03_19_11_46.txt  invert_mask_2026_03_13_18_32.txt  invert_mask_2026_03_14_21_36.txt  invert_mask_2026_03_14_21_38.txt  invert_mask_2026_03_19_11_45.txt  invert_mask_2026_03_19_11_46.txt  password_2026_03_13_18_32.txt  password_2026_03_14_21_36.txt  password_2026_03_14_21_37.txt  password_add_2026_03_19_11_45.txt  password_add_2026_03_19_11_46.txt  password_jump_add_2026_03_19_11_45.txt  password_jump_add_2026_03_19_11_46.txt  password_jump_subtract_2026_03_19_11_45.txt  password_jump_subtract_2026_03_19_11_46.txt  password_jump_xor_2026_03_19_11_45.txt  password_jump_xor_2026_03_19_11_46.txt  password_subtract_2026_03_19_11_45.txt  password_subtract_2026_03_19_11_46.txt  password_xor_2026_03_19_11_45.txt  password_xor_2026_03_19_11_46.txt  pepper_add_2026_03_19_11_45.txt  pepper_add_2026_03_19_11_46.txt  pepper_dual_jump_noise_xor_2026_03_19_11_45.txt  pepper_dual_jump_noise_xor_2026_03_19_11_46.txt  pepper_jump_noise_xor_2026_03_19_11_45.txt  pepper_jump_noise_xor_2026_03_19_11_46.txt  pepper_jump_xor_2026_03_19_11_45.txt  pepper_jump_xor_2026_03_19_11_46.txt  pepper_noise_xor_2026_03_19_11_45.txt  pepper_noise_xor_2026_03_19_11_46.txt  pepper_subtract_2026_03_19_11_45.txt  (+783 more)
build_release/: BenchmarkRun_ReverseCipher  BenchmarkRun_ReverseMaskBlockCipher  BenchmarkRun_ReverseMaskByteBlockCipher  BenchmarkRun_ReverseMaskCipher  CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake
reference/Rotation/: RotateBlockCipher.swift  RotateCipher.swift  RotateMaskBlockCipher.swift  RotateMaskCipher.swift
reference/Splint/: SplintBlockCipher.swift  SplintByteBlockCipher.swift  SplintCipher.swift  SplintMaskBlockCipher.swift  SplintMaskByteBlockCipher.swift  SplintMaskCipher.swift
reference/Weave/: WeaveBlockCipher.swift  WeaveByteBlockCipher.swift  WeaveCipher.swift  WeaveMaskBlockCipher.swift  WeaveMaskByteBlockCipher.swift  WeaveMaskCipher.swift
src/: Jelly.hpp  PeanutButter.hpp
src/Core/: CipherFactory.hpp  CryptMode.hpp  EncryptionLayer.cpp  EncryptionLayer.hpp  LayerCakeCryptDelegate.hpp  LayeredCrypt.cpp  LayeredCrypt.hpp  MaskChunkCursor.hpp  MaskNoiseApplyEngine.cpp  MaskNoiseApplyEngine.hpp  MaskedPassword.cpp  MaskedPassword.hpp  Mixer.hpp  NoiseChunkCursor.hpp  SampleMixer.cpp  SampleMixer.hpp
src/Encryption/: CryptInspector.hpp  EncryptionLayer.cpp  EncryptionLayer.hpp  LayeredCrypt.cpp  LayeredCrypt.hpp  MaskLibrary.cpp  MaskLibrary.hpp  PassthroughCrypt.cpp  PassthroughCrypt.hpp
src/Tables/: Tables.cpp  Tables.hpp
tests_brew/: TestBrewExecutor.cpp  TestBrewExecutor.hpp  TestBrewGenerator.cpp  TestBrewGenerator.hpp  TestMaskNoiseApplyEngine.cpp  TestMaskedPassword.cpp
tests_brew/Ciphers/: CascadeJumpXORCipher_TestBrew.cpp  CascadeXORCipher_TestBrew.cpp  InvertCipher_TestBrew.cpp  InvertMaskCipher_TestBrew.cpp  PasswordAddCipher_TestBrew.cpp  PasswordCipher_TestBrew.cpp  PasswordJumpAddCipher_TestBrew.cpp  PasswordJumpSubtractCipher_TestBrew.cpp  PasswordJumpXORCipher_TestBrew.cpp  PasswordSubtractCipher_TestBrew.cpp  PasswordXORCipher_TestBrew.cpp  PepperAddCipher_TestBrew.cpp  PepperCipherExample_TestBrew.cpp  PepperCipherXORNoise_TestBrew.cpp  PepperCipherXOR_TestBrew.cpp  PepperDualJumpNoiseXORCipher_TestBrew.cpp  PepperJumpNoiseXORCipher_TestBrew.cpp  PepperJumpXORCipher_TestBrew.cpp  PepperNoiseXORCipher_TestBrew.cpp  PepperSubtractCipher_TestBrew.cpp  PepperXORCipher_TestBrew.cpp  ReverseBlockByteCipher_TestBrew.cpp  ReverseBlockCipher_TestBrew.cpp  ReverseCipher_TestBrew.cpp  ReverseMaskBlockCipher_TestBrew.cpp  ReverseMaskByteBlockCipher_TestBrew.cpp  ReverseMaskCipher_TestBrew.cpp  RippleBlockCipher_TestBrew.cpp  RippleCipher_TestBrew.cpp  RippleMaskBlockCipher_TestBrew.cpp  RippleMaskCipher_TestBrew.cpp  RotateBlockByteCipher_TestBrew.cpp  RotateBlockCipher_TestBrew.cpp  (+41 more)
tests_swift/: SwiftTestData.cpp  SwiftTestData.hpp  TestFamilySupport.hpp  TestSwiftExecutor.hpp
(+143 files in other folders)
